--- a/app/views/request_update/request_update.txt.haml
+++ b/app/views/request_update/request_update.txt.haml
@@ -1,15 +1,17 @@
 Hi, #{@name}!
  
-What have you been up to?
+What have you been up to? Just reply to this email to let me know.
 
 Offbott
 
---------------------------------
-Recently others involved with the project #{@project.name} said:
+- if @project.updates
 
-- @project.updates.order("created_at DESC").limit(3).each do |update|
-	#{update.body}
-	by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
-	----
+	--------------------------------
+	Recently others involved with the project #{@project.name} said:
+
+	- @project.updates.order("created_at DESC").limit(3).each do |update|
+		#{update.body}
+		by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
+		----
 
 	
