--- a/app/views/weekly_digest/weekly_digest.txt.haml
+++ b/app/views/weekly_digest/weekly_digest.txt.haml
@@ -1,9 +1,15 @@
 Hi, #{@name}
 
-Here's what your teammates have been up to this week:
+- if @project.updates
 
-- @project.updates.where("created_at >= ? AND created_at <= ?", Date.today.beginning_of_day - 7.days, Date.today.end_of_day).limit(20).each do |update|
-	#{update.body}
-	by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
-	----
+	Here's what your teammates have been up to this week:
+
+	- @project.updates.where("created_at >= ? AND created_at <= ?", Date.today.beginning_of_day - 7.days, Date.today.end_of_day).limit(20).each do |update|
+		#{update.body}
+		by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
+		----
+
+- else
+	
+	Your team mates haven't posted any updates yet! 
 	
