--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -51,6 +51,8 @@
 		- else 
 			%p Weekly digest: #{@project.weekly_digest_day}
 
+		= link_to "Add an update", :controller => "updates", :action => "new", :project => @project
+
 		%p= link_to 'Edit the name and members of this project', edit_project_path(@project)
 
 		%p= link_to 'See all your projects', root_url
