--- a/app/views/updates/_form.html.haml
+++ b/app/views/updates/_form.html.haml
@@ -12,9 +12,12 @@
 			%td.field= f.text_area :body
 
 		- unless params[:action] == 'edit'
-			- for project in current_person.projects
-				%tr
-					%td.label= f.label :project_id, project.name
-					%td.field= radio_button_tag "update[project_id]", project.id, @update.project_id == project.id
+			- if params[:project]
+				= hidden_field(:update, :project_id, :value => params[:project])
+			- else
+				- for project in current_person.projects
+					%tr
+						%td.label= f.label :project_id, project.name
+						%td.field= radio_button_tag "update[project_id]", project.id
 	.actions
 		= f.submit 'Save'
