--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -14,7 +14,7 @@
 				- lastday = ''
 				- today = Time.new
 				- yesterday = today - 86400
-				- @project.updates.reverse_each do |update|
+				- @project.updates.order("created_at").reverse_each do |update|
 					- updateday = update.created_at.strftime("%Y-%m-%d")
 					- if updateday != lastday
 						- if updateday == today.strftime("%Y-%m-%d")
