--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -28,7 +28,7 @@
 						- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://offbott.com/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
 						%p.body= raw(body_with_linked_hashtags)
 						%p.credit 
-							<span class="author">#{update.person.name}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
+							<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
 							%span.permalink= link_to '∞', update_path(update)
 							- if update.editable_by?(current_person)
 								%span.edit= link_to 'Edit', edit_update_path(update)
@@ -42,7 +42,7 @@
 		#pop_box
 			%ul
 				- @project.people.each do |person|
-					%li= link_to person.name, person
+					%li= link_to person.name.titleize, person
 				- @project.invitations.each do |person|
 					%li <em>#{person.email}</em>
 
