--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,6 +15,8 @@
 					- if person_signed_in?
 						= link_to 'Your Projects', root_url
 						&nbsp;
+						= link_to 'You', person_path(current_person)
+						&nbsp;
 						= link_to 'Sign Out', destroy_person_session_path, :method => :delete        
 					- else
 						= link_to 'Sign In', new_person_session_path 
