--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -23,7 +23,7 @@
 							%p= 'Yesterday'
 						- else
 							%p= update.created_at.strftime("%A %d %B")
-					#update
+					.update
 						- body = update.body
 						- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://offbott.com/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
 						%p.body= raw(body_with_linked_hashtags)
