--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -139,16 +139,29 @@ p#notice {
 #email_adds .button {
 	margin-right: 15px;
 	}
-	
-td.edit a {
+
+.update .permalink a {
 	display: block;
+	margin-left: 10px;
+	float: right;
+	text-indent: -999999px;
+	width: 16px;
+	height: 16px;
+	background: transparent url('/images/icons/link.png') 0 0 no-repeat;
+	}
+.update .edit a {
+	display: block;
+	margin-left: 10px;
+	float: right;
 	text-indent: -999999px;
 	width: 16px;
 	height: 16px;
 	background: transparent url('/images/icons/pencil.png') 0 0 no-repeat;
 	}
-td.delete a {
+.update .delete a {
 	display: block;
+	margin-left: 10px;
+	float: right;
 	text-indent: -999999px;
 	width: 16px;
 	height: 16px;
