--- a/app/views/updates/tagged.html.haml
+++ b/app/views/updates/tagged.html.haml
@@ -4,7 +4,7 @@
 
 	- @updates.each do |update|
 		%tr
-			%td= update.body
+			%td= extract_reply(update.body)
 			%td= link_to 'Show', update
 			- if update.editable_by?(current_person)
 				%td= link_to 'Edit', edit_update_path(update)
