--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -1,11 +1,14 @@
 %h1= @person.name.titleize
-%p
-	%a{:href=>@person.email}= @person.email
 
-%h2 #{@person.name.titleize}'s projects
-%ul
-	- for project in @person.projects
-		%li= project.name
+%p Registered email: <em>#{@person.email}</em>
+
+%h4 #{@person.name.titleize}'s projects
+
+#pop_box
+	%table#project_list
+		- for project in @person.projects
+			%tr
+				%td= project.name
 
 - if @person.editable_by?(current_person)
 	= link_to 'Edit', edit_person_path(@person)
