--- a/app/views/request_update/request_update.txt.haml
+++ b/app/views/request_update/request_update.txt.haml
@@ -10,7 +10,7 @@ Offbott
 	Recently others involved with the project #{@project.name} said:
 
 	- @project.updates.order("created_at DESC").limit(3).each do |update|
-		#{update.body}
+		#{extract_reply(update.body)}
 		by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
 		----
 
