added support for line breaks

--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -26,7 +26,7 @@
 					.update
 						- body = extract_reply(update.body)
 						- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://offbott.com/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
-						%p.body= raw(body_with_linked_hashtags)
+						%p.body= simple_format(raw(body_with_linked_hashtags))
 						%p.credit 
 							<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
 							%span.permalink= link_to '∞', update_path(update)
