--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -52,6 +52,8 @@
 		- else 
 			%p Weekly digest: #{@project.weekly_digest_day}
 
+		%p Found a bug? <a href="https://github.com/stml/offbot/issues/new">Let us know on github</a> or <a href="mailto:ntalia.buckley@gmail.com?subject=Found a bug in Offbott">via email</a>.
+
 		= link_to "Add an update", :controller => "updates", :action => "new", :project => @project
 
 		%p= link_to 'Edit the name and members of this project', edit_project_path(@project)
