--- a/app/views/updates/tagged.html.haml
+++ b/app/views/updates/tagged.html.haml
@@ -3,9 +3,9 @@
 #updates
 	- @updates.each do |update|
 		.update
-			- body = extract_reply(update.body)
+			- body = add_line_breaks(extract_reply(update.body))
 			- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://offbott.com/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
-			%p.body= simple_format(raw(body_with_linked_hashtags))
+			%p.body= raw(body_with_linked_hashtags)
 			%p.credit 
 				<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
 				%span.permalink= link_to 'Show', update_path(update)
