--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -25,7 +25,7 @@
 							%p= update.created_at.strftime("%A %d %B")
 					.update
 						- body = add_line_breaks(extract_reply(update.body))
-						- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://offbott.com/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
+						- body_with_linked_hashtags = auto_link(body, { :hashtag_url_base => "http://#{request.host}/projects/#{@project.id}/updates/", :hashtag_class => "hashtag" })
 						%p.body= raw(body_with_linked_hashtags)
 						%p.credit 
 							<span class="author">#{update.person.name.titleize}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
