--- a/app/views/request_update/request_update.txt.haml
+++ b/app/views/request_update/request_update.txt.haml
@@ -14,4 +14,10 @@ Offbott
 		by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
 		----
 
+--------------------------------
+
+= link_to "See this project", project_path
+\|
+= link_to "Edit this project", edit_project_path
+
 	
