--- a/app/views/request_update/request_update.txt.haml
+++ b/app/views/request_update/request_update.txt.haml
@@ -16,8 +16,8 @@ Offbott
 
 --------------------------------
 
-= link_to "See this project", project_path
+%a{:href=>"http://#{request.host}/projects/#{@project.id}"} See this project
 \|
-= link_to "Edit this project", edit_project_path
+%a{:href=>"http://#{request.host}/projects/#{@project.id}/edit"} Edit this project
 
 	
