--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -20,6 +20,6 @@
 
 		%hr
 
-		= link_to "See this project", project_path
+		%a{:href=>"http://#{request.host}/projects/#{@project.id}"} See this project
 		\|
-		= link_to "Edit this project", edit_project_path
+		%a{:href=>"http://#{request.host}/projects/#{@project.id}/edit"} Edit this project
