correct links in emails

--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -20,6 +20,6 @@
 
 		%hr
 
-		%a{:href=>"http://#{request.host}/projects/#{@project.id}"} See this project
+		%a{:href=>"http://offbott.com/projects/#{@project.id}"} See this project
 		\|
-		%a{:href=>"http://#{request.host}/projects/#{@project.id}/edit"} Edit this project
+		%a{:href=>"http://offbott.com/projects/#{@project.id}/edit"} Edit this project
