--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -1,20 +1,29 @@
 %h1 Your projects
 
-- if @projects.empty?
-	%p <span class="logotype">Offbot</span> doesn't know about any of your projects yet.
+#project_cols
 	
-- else
-	#pop_box
-		%table#project_list
-			- @projects.each do |project|
-				%tr
-					%td= link_to project.name, project, :title => "Check out this Project"
-					- if current_person.can_view?(project)
-						%td.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
-					- if project.manageable_by?(current_person)
-						%td.delete= link_to 'Delete', project, :confirm => 'Are you sure you want to delete this project?', :method => :delete, :title => "Delete this Project"
+	#project_col_left
 
-%p= link_to 'Create a new Project', new_project_path
+		- if @projects.empty?
+			%p <span class="logotype">Offbot</span> doesn't know about any of your projects yet.
+	
+		- else
+		#pop_box
+			#project_list
+				- @projects.each do |project|
+					%p
+						= link_to project.name, project, :title => "Check out this Project"
+						- if project.manageable_by?(current_person)
+							%span.delete= link_to 'Delete', project, :confirm => 'Are you sure you want to delete this project?', :method => :delete, :title => "Delete this Project"
+						- if current_person.can_view?(project)
+							%span.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
+							
+	#project_col_right	
 
-- if current_person.is_superadmin?
-	%p= link_to 'See all Projects', projects_path
+		#link_box
+			%p= link_to 'Create a new Project', new_project_path
+		#link_box
+			- if current_person.is_superadmin?
+				%p= link_to 'See all Projects', projects_path
+		#bug_box
+			%p <strong>Found a bug?</strong> <a href="https://github.com/stml/offbot/issues/new">Let us know on github</a> or <a href="mailto:ntalia.buckley@gmail.com?subject=Found a bug in Offbott">via email</a>.
