--- a/app/views/request_update/request_update.txt.haml
+++ b/app/views/request_update/request_update.txt.haml
@@ -16,8 +16,8 @@ Offbott
 
 --------------------------------
 
-%a{:href=>"http://#{request.host}/projects/#{@project.id}"} See this project
+%a{:href=>"http://offbott.com/projects/#{@project.id}"} See this project
 \|
-%a{:href=>"http://#{request.host}/projects/#{@project.id}/edit"} Edit this project
+%a{:href=>"http://offbott.com/projects/#{@project.id}/edit"} Edit this project
 
 	
