--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -1,24 +1,39 @@
 %h1= @person.name.titleize
 
-%p Registered email: <em>#{@person.email}</em>
-- if @person.editable_by?(current_person)
-	- if @person.email_key
-		%h3 Use the secret email addresses to add updates to projects whenever you like
-	- else
-		%h3 Would you like to send emails to offbot whenver you like?
-		%p You can generate an email address for your projects, and Offbott will automatically connect them to the right project.
-		%p= link_to "Generate!", generate_email_key_path(@person)
 #pop_box
-	%table#project_list
-		- for project in @person.projects
-			%tr
-				%td
-					= project.name
-					- if @person.email_key and @person.editable_by?(current_person)
-						- email = "#{project.to_slug}.#{@person.email_key}@offbott.com"
-						\| <a href="mailto:#{email}">#{email}</a>
+	%p Registered email: <em>#{@person.email}</em>
 
-- if @person.editable_by?(current_person)
-	= link_to 'Edit', edit_person_path(@person)
-	\|
-= link_to 'Back', root_url
+#project_cols
+
+	#project_col_left
+	
+		%h4 #{@person.name.titleize}'s Projects		
+		
+		#pop_box
+			#project_list
+				- for project in @person.projects
+					%p
+						= link_to project.name, project, :title => "Check out this Project"
+						- if project.manageable_by?(current_person)
+							%span.delete= link_to 'Delete', project, :confirm => 'Are you sure you want to delete this project?', :method => :delete, :title => "Delete this Project"
+						- if current_person.can_view?(project)
+							%span.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
+						- if @person.email_key and @person.editable_by?(current_person)
+							- email = "#{project.to_slug}.#{@person.email_key}@offbott.com"
+							%span.email <a href="mailto:#{email}">#{email}</a>
+
+		- if @person.editable_by?(current_person)
+			- if @person.email_key
+				%p.emailicon The email addresses above allow you to send updates whenever you like - just save them in your address book.
+			- else
+				%h3 Would you like to send emails to offbot whenever you like?
+				%p You can generate an email address for your projects, and Offbott will automatically connect them to the right project.
+				%p= link_to "Generate!", generate_email_key_path(@person)
+
+	#project_col_right
+
+		- if @person.editable_by?(current_person)
+			#link_box
+				%p= link_to 'Edit', edit_person_path(@person)
+		#link_box
+			%p= link_to 'Home', root_url
