--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -47,8 +47,8 @@
 			%ul.updatepersonlist
 				- @project.people.each do |person|
 					%li 
-						<span class="updatepersoncount">34</span>
 						=link_to person.name.titleize, person
+						<span class="updatepersoncount">#{person.updates.count}</span>
 				- @project.invitations.uniq.each do |person|
 					- unless @project.people.include?(Person.find_by_email(person.email))
 						%li <em>#{person.email[0,20]}…</em>
