--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -7,7 +7,7 @@
 				%td= link_to project.name, project
 				- if project.manageable_by?(current_person)
 					%td.edit= link_to 'Edit', edit_project_path(project)
-					%td.delete= link_to 'Destroy', project, :confirm => 'Are you sure?', :method => :delete
+					%td.delete= link_to 'Delete', confirm_delete_project_path(project)
 
 %p= link_to 'Create a new Project', new_project_path
 
