--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -14,7 +14,7 @@
 					%p
 						= link_to project.name, project, :title => "Check out this Project"
 						- if project.manageable_by?(current_person)
-							%span.delete= link_to 'Delete', project, :confirm => 'Are you sure you want to delete this project?', :method => :delete, :title => "Delete this Project"
+							%span.delete= link_to 'Delete', confirm_delete_project_path(project)
 						- if current_person.can_view?(project)
 							%span.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
 							
