--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,6 +164,17 @@ span.edit a,
 	background: transparent url('/images/icons/pencil.png') 0 0 no-repeat;
 	border: none;
 	}
+span.add a,
+.update .add a {
+	display: block;
+	margin-left: 10px;
+	float: right;
+	text-indent: -999999px;
+	width: 16px;
+	height: 16px;
+	background: transparent url('/images/icons/add.png') 0 0 no-repeat;
+	border: none;
+	}
 span.delete a,
 .update .delete a {
 	display: block;
