--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -19,7 +19,7 @@ h1, h2, h3, h4, p, ul, table {
 	margin-bottom: 10px;
 	}
 
-.project_name h3 {
+.project_name, .greeting {
 	border-bottom: 1px solid #000;
 	margin-bottom: 15px;
 }
