--- a/app/assets/stylesheets/email.css
+++ b/app/assets/stylesheets/email.css
@@ -5,8 +5,7 @@
 
 body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background: #fff url('/images/robot_bg.png') bottom right no-repeat;
-	background-attachment: fixed;
+	margin: 20px;
 	}
 
 h1 { font-size: 1.8em; }
